# creative-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
creative_rag/: __init__.py  api.py  cli.py  config.py  embed.py  evaluate.py  generate.py  ingest.py  llm.py  obs.py  retrieve.py  sqlagent.py  sqleval.py
deploy/: DEPLOY_PLAN.md  apply.sh  destroy.sh  main.tf  outputs.tf  variables.tf
deploy/hf-space/: README.md
eval/: README.md  qa_craft.jsonl  qa_sample.jsonl
eval/sample_corpus/: stocks_and_lenses.md  tools_and_motion.md
eval/sql/: qa_sql.jsonl  schema.sql
sample_corpus/: cinematography_basics.md
tests/: test_core.py  test_evaluate.py  test_obs.py  test_sqlagent.py
