[project]
name = "creative-rag"
version = "0.1.0"
description = "Hybrid retrieval + citation-verify RAG over a craft/style corpus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
crag = "creative_rag.cli:main"
creative-rag = "creative_rag.api:main"
crag-eval = "creative_rag.evaluate:main"
crag-sql-eval = "creative_rag.sqleval:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["creative_rag"]
